[project]
name = "glasglitch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "glasgow[builtin-toolchain]",
]

[tool.uv.sources]
glasgow = { git = "https://github.com/GlasgowEmbedded/glasgow.git", subdirectory = "software" }
